--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,8 @@
 @import "~bootstrap/scss/bootstrap.scss";
+
+@import "./features.scss";
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
