關於我架構

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,9 +5,8 @@
   </a>
 
   <ul class="nav nav-pills">
-    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">關於我</a></li>
+    <li class="nav-item"><%= link_to "關於我", about_path, class: 'nav-link active', 'aria-current': 'page' %></li>
     <li class="nav-item"><%= link_to "文章", posts_path, class: 'nav-link' %></li>
     <li class="nav-item"><a href="#" class="nav-link">作品集</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">聯絡我</a></li>
   </ul>
 </header>
