--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,10 @@
 <%= render 'category_nav' %>
-<div class="py-5">
-  <div class="container">
-
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<div class="container px-4 py-4">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 <% 9.times.each do |i| %>
-      <div class="col">
-        <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text"><%= i %>-This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <%= link_to "繼續閱讀", post_path(0), class: 'btn btn-sm btn-outline-primary' %>
-              <small class="text-body-secondary">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-<% end %>
+    <div class="col">
+      <%= render 'card', link_path: post_path(0) %>
     </div>
+<% end %>
   </div>
 </div>
