--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,6 @@
   <ul class="nav nav-pills">
     <li class="nav-item"><%= link_to "關於我", about_path, class: 'nav-link active', 'aria-current': 'page' %></li>
     <li class="nav-item"><%= link_to "文章", posts_path, class: 'nav-link' %></li>
-    <li class="nav-item"><a href="#" class="nav-link">作品集</a></li>
-  </ul>
+    <li class="nav-item"><%= link_to "作品集", works_path, class: 'nav-link' %></li>
+    </ul>
 </header>
