調整整體架構間距

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div id="container" class="container">
       <%= render "shared/header" %>
-      <div id="main">
+      <div id="main" class="px-4 py-4">
         <%= yield %>
       </div>
       <%= render "shared/footer" %>
