--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer id="footer" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
+  <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
 
-    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-    </a>
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+  </a>
 
-    <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">關於我</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">文章</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">作品集</a></li>
-    </ul>
-  </footer>
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><%= link_to "關於我", about_path, class: "nav-link px-2 text-body-secondary" %></li>
+    <li class="nav-item"><%= link_to "文章", posts_path, class: "nav-link px-2 text-body-secondary" %></li>
+    <li class="nav-item"><%= link_to "作品集", works_path, class: "nav-link px-2 text-body-secondary" %></li>
+  </ul>
+</footer>
