--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <div id="container" class="container">
       <%= render "shared/header" %>
       <div id="main" class="px-4 py-4">
+        <%= render 'shared/notice' %>
         <%= yield %>
       </div>
       <%= render "shared/footer" %>
