使用 scaffold 產生後台的 Work

--- a/app/views/admins/shared/_sidebar.html.erb
+++ b/app/views/admins/shared/_sidebar.html.erb
@@ -25,7 +25,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to '#', class: "nav-link d-flex align-items-center gap-2" do %>
+          <%= link_to admins_works_path, class: "nav-link d-flex align-items-center gap-2" do %>
             <svg class="bi"><use xlink:href="#file-earmark"/></svg>
             作品集
           <% end %>
