--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= javascript_pack_tag 'admins/admin', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= render "admins/shared/svgs" %>    
-    <%= render "admins/shared/header" %>
-    <div class="container-fluid">
-      <div class="row">
-        <%= render "admins/shared/sidebar" %>
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-          <%= yield %>
-        </main>
+    <div id="main" class="row">
+      <%= render "admins/shared/header" %>
+      <%= render "admins/shared/sidebar" %>
+      <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <%= yield %>
       </div>
-    </div>
+    </div> <!-- /main -->
+    <%= javascript_pack_tag 'admins/admin' %>
   </body>
 </html>
