--- a/app/views/admins/works/index.html.erb
+++ b/app/views/admins/works/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Admins Works</h1>
+<h1>Works</h1>
 
 <table>
   <thead>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Admins Work', new_admins_work_path %>
+<%= link_to 'New Work', new_admins_work_path %>
