新增 PageBlock 供單頁使用

--- a/app/views/admins/shared/_sidebar.html.erb
+++ b/app/views/admins/shared/_sidebar.html.erb
@@ -42,6 +42,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <%= link_to admins_page_blocks_path, class:"nav-link d-flex align-items-center gap-2" do %>
+            <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
+            Page Blocks
+          <% end %>
+        </li>
+        <li class="nav-item">
           <%= link_to destroy_admin_session_path, class: "nav-link d-flex align-items-center gap-2", method: :delete do %>
             <svg class="bi"><use xlink:href="#door-closed"/></svg>
             Sign out
