後台 關於我套用 PageBlock 頁面

--- a/app/views/admins/page_blocks/_form.html.erb
+++ b/app/views/admins/page_blocks/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field mb-3">
     <%= form.label :meta_key %>
-    <%= form.text_field :meta_key, class: 'form-control' %>
+    <%= form.text_field :meta_key, class: 'form-control', required: true %>
   </div>
 
   <div class="field mb-3">
