--- a/app/views/admins/page_blocks/edit.html.erb
+++ b/app/views/admins/page_blocks/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', page_block: @page_block %>
 
-<%= link_to 'Show', admins_page_block_path(@page_block) %> |
-<%= link_to 'Back', admins_page_blocks_path %>
+<%= link_to 'Back', :back %>
