--- a/app/views/admins/page_blocks/new.html.erb
+++ b/app/views/admins/page_blocks/new.html.erb
@@ -1,5 +1,4 @@
 <h1>New Page Block</h1>
 
 <%= render 'form', page_block: @page_block %>
-
-<%= link_to 'Back', admins_page_blocks_path %>
+<%= link_to 'Back', :back %>
