--- a/app/views/admins/page_blocks/show.html.erb
+++ b/app/views/admins/page_blocks/show.html.erb
@@ -20,5 +20,4 @@
   <%= @page_block.note %>
 </p>
 
-<%= link_to 'Edit', edit_admins_page_block_path(@page_block) %> |
-<%= link_to 'Back', admins_page_blocks_path %>
+<%= link_to 'Edit', edit_admins_page_block_path(@page_block) %>
