--- a/app/views/admins/shared/_sidebar.html.erb
+++ b/app/views/admins/shared/_sidebar.html.erb
@@ -13,7 +13,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <%= link_to '#', class: "nav-link d-flex align-items-center gap-2" do %>
+          <%= link_to admins_page_blocks_path(meta_key: 'about'), class: "nav-link d-flex align-items-center gap-2" do %>
             <svg class="bi"><use xlink:href="#file-earmark"/></svg>
             關於我
           <% end %>
