--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,5 +8,6 @@
     <li class="nav-item"><%= link_to "關於我", about_path, class: "nav-link #{'active' if request.path == about_path}", "aria-current": "page" %></li>
     <li class="nav-item"><%= link_to "文章", posts_path, class: "nav-link #{'active' if controller_name == 'posts'}" %></li>
     <li class="nav-item"><%= link_to "作品集", works_path, class: "nav-link #{'active' if controller_name == 'works'}" %></li>
+    <li class="nav-item"><%= link_to "聯絡我", contact_path, class: "nav-link #{'active' if request.path == contact_path}" %></li>
   </ul>
 </header>
