--- a/app/views/admins/shared/_sidebar.html.erb
+++ b/app/views/admins/shared/_sidebar.html.erb
@@ -30,6 +30,12 @@
             作品集
           <% end %>
         </li>
+        <li class="nav-item">
+          <%= link_to admins_contacts_path, class: "nav-link d-flex align-items-center gap-2" do %>
+            <svg class="bi"><use xlink:href="#file-earmark"/></svg>
+            聯絡我
+          <% end %>
+        </li>
       </ul>
 
       <hr class="my-3">
