--- a/app/views/admins/posts/index.html.erb
+++ b/app/views/admins/posts/index.html.erb
@@ -5,10 +5,11 @@
 <table>
   <thead>
     <tr>
+      <th>Cover image</th>
       <th>Title zh</th>
       <th>Title en</th>
-      <th>Content zh</th>
-      <th>Content en</th>
+      <th>Intro zh</th>
+      <th>Intro en</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,10 +17,11 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= image_tag(post.cover_image_url, height: 100) %></td>
         <td><%= post.title_zh %></td>
         <td><%= post.title_en %></td>
-        <td><%= strip_tags(post.content_zh).truncate(50) %></td>
-        <td><%= strip_tags(post.content_en).truncate(50) %></td>
+        <td><%= post.intro_zh %></td>
+        <td><%= post.intro_en %></td>
         <td><%= link_to 'Show', admins_post_path(post) %></td>
         <td><%= link_to 'Edit', edit_admins_post_path(post) %></td>
         <td><%= link_to 'Destroy', admins_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %></td>
