--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,10 +1,15 @@
 <div class="card shadow-sm">
-  <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+<% if post.cover_image.present? %>
+  <%= image_tag post.cover_image_url, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
+<% else %>
+    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+<% end %>
   <div class="card-body">
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text" style="height: 7rem"><%= post.intro_zh.truncate(100) %></p>
     <div class="d-flex justify-content-between align-items-center">
-      <%= link_to "繼續閱讀", link_path, class: 'btn btn-sm btn-outline-primary' %>
-      <small class="text-body-secondary">9 mins</small>
+      <%= link_to "繼續閱讀", post_path(post), class: 'btn btn-sm btn-outline-primary' %>
+      <small class="text-body-secondary"><%= post.updated_at.to_s(:date) %></small>
     </div>
   </div>
 </div>
+
