作品集後台新增 logo 及簡介欄位

--- a/app/views/admins/works/show.html.erb
+++ b/app/views/admins/works/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Logo:</strong>
+  <%= image_tag @work.logo_url, height: 100 %>
+</p>
+
+<p>
   <strong>Name zh:</strong>
   <%= @work.name_zh %>
 </p>
@@ -11,18 +16,28 @@
 </p>
 
 <p>
+  <strong>Intro zh:</strong>
+  <%= @work.intro_zh %>
+</p>
+
+<p>
+  <strong>Intro en:</strong>
+  <%= @work.intro_en %>
+</p>
+
+<p>
   <strong>Site url:</strong>
   <%= @work.site_url %>
 </p>
 
 <p>
   <strong>Desc zh:</strong>
-  <%= @work.desc_zh %>
+  <%== @work.desc_zh %>
 </p>
 
 <p>
   <strong>Desc en:</strong>
-  <%= @work.desc_en %>
+  <%== @work.desc_en %>
 </p>
 
 <%= link_to 'Edit', edit_admins_work_path(@work) %> |
