--- a/app/views/admins/works/_form.html.erb
+++ b/app/views/admins/works/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:admins, work]) do |form| %>
+<%= form_with(model: [:admins, work], multipart: true) do |form| %>
   <% if work.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(work.errors.count, "error") %> prohibited this work from being saved:</h2>
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field mb-3">
+    <%= form.label :logo %>
+    <%= form.file_field :logo, class: 'form-control' %>
+  </div>
+
+  <div class="field mb-3">
     <%= form.label :name_zh %>
     <%= form.text_field :name_zh, class: 'form-control' %>
   </div>
@@ -19,6 +24,16 @@
   <div class="field mb-3">
     <%= form.label :name_en %>
     <%= form.text_field :name_en, class: 'form-control' %>
+  </div>
+
+  <div class="field mb-3">
+    <%= form.label :intro_zh %>
+    <%= form.text_area :intro_zh, class: 'form-control', rows: 5 %>
+  </div>
+
+  <div class="field mb-3">
+    <%= form.label :intro_en %>
+    <%= form.text_area :intro_en, class: 'form-control', rows: 5 %>
   </div>
 
   <div class="field mb-3">
