--- a/app/views/admins/works/index.html.erb
+++ b/app/views/admins/works/index.html.erb
@@ -5,11 +5,12 @@
 <table>
   <thead>
     <tr>
+      <th>Logo</th>
       <th>Name zh</th>
       <th>Name en</th>
       <th>Site url</th>
-      <th>Desc zh</th>
-      <th>Desc en</th>
+      <th>Intro zh</th>
+      <th>Intro en</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,11 +18,12 @@
   <tbody>
     <% @works.each do |work| %>
       <tr>
+        <td><%= image_tag work.logo_url, height: 100 %></td>
         <td><%= work.name_zh %></td>
         <td><%= work.name_en %></td>
         <td><%= work.site_url %></td>
-        <td><%= work.desc_zh %></td>
-        <td><%= work.desc_en %></td>
+        <td><%= nl2br(work.intro_zh).truncate(100) if work.intro_zh.present? %></td>
+        <td><%= nl2br(work.intro_en).truncate(100) if work.intro_en.present? %></td>
         <td><%= link_to 'Show', admins_work_path(work) %></td>
         <td><%= link_to 'Edit', edit_admins_work_path(work) %></td>
         <td><%= link_to 'Destroy', admins_work_path(work), method: :delete, data: { confirm: 'Are you sure?' } %></td>
