--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,10 +1,28 @@
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" data-bs-theme="light">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+<% site_screenshots.size.times.each do |i| %>
+  <% if i == 0 %>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 0" aria-current="true"></button>
+  <% else %>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="<%= i %>" aria-label="Slide <%= i + 1 %>" class=""></button>
+    <% end %>
+<% end %>
   </div>
   <div class="carousel-inner">
+<% site_screenshots.each_with_index do |site_screenshot, i| %>
+    <div class="carousel-item <%= 'active' if i == 0 %>">
+      <%= image_tag site_screenshot.image_url, width: '100%' %>
+      <div class="container">
+        <div class="carousel-caption text-start">
+            <h1>Example headline.</h1>
+          <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+          <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+        </div>
+      </div>
+    </div>
+<% end %>
+
+<% if false %>
     <div class="carousel-item active">
       <%= image_tag 'https://picsum.photos/1600/900', width: '100%' %>
       <div class="container">
@@ -35,6 +53,7 @@
         </div>
       </div>
     </div>
+<% end %>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
