--- a/app/views/works/_feature_col.html.erb
+++ b/app/views/works/_feature_col.html.erb
@@ -1,8 +1,9 @@
 <div class="feature col">
   <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-    <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+    <%= image_tag work.logo_url, height: 64 %>
   </div>
-  <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-  <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-  <%= link_to "Call to action", link_path, class: 'icon-link' %>
+  <h3 class="fs-2 text-body-emphasis"><%= work.name_zh %></h3>
+  <p style="height: 7rem"><%= strip_tags(work.intro_zh).truncate(100) if work.intro_zh.present? %></p>
+  <%= link_to "前往網站", url_format(work.site_url), target: '_blank', class: 'icon-link' %> / 
+  <%= link_to "詳細介紹", work_path(work), class: 'icon-link' %>
 </div>
