--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,9 +1,12 @@
 <div class="row g-5">
   <div class="col">
     <article class="work">
-      <h2 class="display-5 link-body-emphasis mb-1">網站 Title</h2>
-      <%= render 'shared/carousel' %>
-      <p class="work-meta">截圖日期: January 1, 2021</p>
+      <h2 class="display-5 link-body-emphasis mb-1"><%= @work.name_zh %></h2>
+      <%= render 'shared/carousel', site_screenshots: @work.site_screenshots %>
+      <p class="work-meta">截圖日期: <%= @work.updated_at.to_s(:date) %></p>
+      <%== @work.desc_zh %>
+
+<% if false %>
       <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
       <hr>
       <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
@@ -52,6 +55,7 @@
       <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
       <pre><code>Example code block</code></pre>
       <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+<% end %>
     </article>
   </div>
 </div>
