--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,9 +1,5 @@
 <div class="card shadow-sm">
-<% if post.cover_image.present? %>
-  <%= image_tag post.cover_image_url, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
-<% else %>
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-<% end %>
+  <%= image_tag post.cover_image_url, fake: true, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
   <div class="card-body">
     <p class="card-text" style="height: 7rem"><%= post.intro_zh.truncate(100) %></p>
     <div class="d-flex justify-content-between align-items-center">
