--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,7 @@
 <div class="row g-5">
   <article class="about">
     <h2 class="display-5 link-body-emphasis mb-1">聯絡我</h2>
-    <%= image_tag 'https://picsum.photos/1600/900', width: '100%' %>
+    <%= image_tag '', fake: true, width: '100%' %>
     <h2>聯絡我注意事項</h2>
     <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
     <h3>Sub-heading</h3>
