--- a/app/views/works/_feature_col.html.erb
+++ b/app/views/works/_feature_col.html.erb
@@ -1,6 +1,6 @@
 <div class="feature col">
   <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-    <%= image_tag work.logo_url, height: 64 %>
+    <%= image_tag work.logo_url, fake: true, height: 64 %>
   </div>
   <h3 class="fs-2 text-body-emphasis"><%= work.name_zh %></h3>
   <p style="height: 7rem"><%= strip_tags(work.intro_zh).truncate(100) if work.intro_zh.present? %></p>
