fix: without this instruction, relative CSS file won't  be loaded

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,5 +17,6 @@
       </div>
     </div> <!-- /main -->
     <%= javascript_pack_tag 'admins/admin' %>
+    <%= stylesheet_pack_tag 'admins/admin', media: 'all' %>
   </body>
 </html>
