--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,6 +1,7 @@
+<% col_name = local_assigns[:col_name].presence || 'image' # 預設欄位名為 image %>
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" data-bs-theme="light">
   <div class="carousel-indicators">
-<% site_screenshots.size.times.each do |i| %>
+<% carousel_items.size.times.each do |i| %>
   <% if i == 0 %>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 0" aria-current="true"></button>
   <% else %>
@@ -9,9 +10,9 @@
 <% end %>
   </div>
   <div class="carousel-inner">
-<% site_screenshots.each_with_index do |site_screenshot, i| %>
+<% carousel_items.each_with_index do |item, i| %>
     <div class="carousel-item <%= 'active' if i == 0 %>">
-      <%= image_tag site_screenshot.image_url, width: '100%' %>
+      <%= image_tag item.try(col_name).try('thumb').try('url'), width: '100%' %>
       <div class="container">
         <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
