--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col">
     <article class="work">
       <h2 class="display-5 link-body-emphasis mb-1"><%= @work.name_zh %></h2>
-      <%= render 'shared/carousel', site_screenshots: @work.site_screenshots %>
+      <%= render 'shared/carousel', carousel_items: @work.site_screenshots %>
       <p class="work-meta">截圖日期: <%= @work.updated_at.to_s(:date) %></p>
       <%== @work.desc_zh %>
 
