--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,11 +1,11 @@
 <div class="card shadow-sm">
   <%= image_tag post.cover_image_url, fake: true, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
   <div class="card-body">
-    <p class="card-text" style="height: 7rem"><%= post.intro_zh.truncate(100) %></p>
+    <h5 class="card-title"><%= post.title_zh %></h5>
+    <p class="card-text" style="height: 4rem"><%= post.intro_zh.truncate(50) %></p>
     <div class="d-flex justify-content-between align-items-center">
       <%= link_to "繼續閱讀", post_path(post), class: 'btn btn-sm btn-outline-primary' %>
       <small class="text-body-secondary"><%= post.updated_at.to_s(:date) %></small>
     </div>
   </div>
 </div>
-
