--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,64 +6,11 @@
       <p class="blog-post-meta"><%= @post.updated_at.to_s(:date) %></p>
       <%= image_tag @post.cover_image_url , width: '100%', height: '100%' %>
       <%== @post.content_zh %>
-<% if false %>
-      <h2 class="display-5 link-body-emphasis mb-1"></h2>
-      <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-      <%= image_tag 'https://picsum.photos/1600/900', width: '100%', height: '100%' %>
-      <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-      <hr>
-      <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-      <h2>Blockquotes</h2>
-      <p>This is an example blockquote in action:</p>
-      <blockquote class="blockquote">
-        <p>Quoted text goes here.</p>
-      </blockquote>
-      <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-      <h3>Example lists</h3>
-      <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
-      <ul>
-        <li>First list item</li>
-        <li>Second list item with a longer description</li>
-        <li>Third list item to close it out</li>
-      </ul>
-      <p>And this is an ordered list:</p>
-      <ol>
-        <li>First list item</li>
-        <li>Second list item with a longer description</li>
-        <li>Third list item to close it out</li>
-      </ol>
-      <p>And this is a definition list:</p>
-      <dl>
-        <dt>HyperText Markup Language (HTML)</dt>
-        <dd>The language used to describe and define the content of a Web page</dd>
-        <dt>Cascading Style Sheets (CSS)</dt>
-        <dd>Used to describe the appearance of Web content</dd>
-        <dt>JavaScript (JS)</dt>
-        <dd>The programming language used to build advanced Web sites and applications</dd>
-      </dl>
-      <h2>Inline HTML elements</h2>
-      <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
-      <ul>
-        <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
-        <li><em>To italicize text</em>, use <code class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.</li>
-        <li>Abbreviations, like <abbr title="HyperText Markup Language">HTML</abbr> should use <code class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.</li>
-        <li>Citations, like <cite>— Mark Otto</cite>, should use <code class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.</li>
-        <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
-        <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
-      </ul>
-      <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-      <h2>Heading</h2>
-      <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-      <h3>Sub-heading</h3>
-      <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-      <pre><code>Example code block</code></pre>
-      <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-<% end %>
     </article>
 
     <nav class="blog-pagination" aria-label="Pagination">
-      <%= link_to("Older", post_path(@post.older), class: 'btn btn-outline-secondary rounded-pill') if @post.older %>
-      <%= link_to("Newer", post_path(@post.newer), class: 'btn btn-outline-primary rounded-pill') if @post.newer %>
+      <%= link_to("較舊文章", post_path(@post.older), class: 'btn btn-outline-secondary rounded-pill') if @post.older %>
+      <%= link_to("較新文章", post_path(@post.newer), class: 'btn btn-outline-primary rounded-pill') if @post.newer %>
       <% if false %>
         <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
         <a class="btn btn-outline-secondary rounded-pill disabled">Newer</a>
@@ -74,12 +21,12 @@
   <div class="col-md-3">
     <div class="position-sticky" style="top: 2rem;">
       <div>
-        <h4 class="fst-italic">Recent posts</h4>
+        <h4 class="fst-italic">相關文章</h4>
         <ul class="list-unstyled">
 <% @relative_posts.each do |relative_post| %>
           <li>
             <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-              <%= image_tag relative_post.cover_image_url, class: 'bd-placeholder-img', height: 96 %>
+              <%= image_tag relative_post.cover_image.thumb.url, class: 'bd-placeholder-img', height: 80 %>
               <div class="col-lg-8">
                 <h6 class="mb-0"><%= relative_post.title_zh %></h6>
                 <small class="text-body-secondary"><%= relative_post.updated_at.to_s(:date) %></small>
